# xiangcai

./: .flake8  .gitignore  .pre-commit-config.yaml  .rancher-pipeline.yml  Dockerfile  Jenkinsfile  manage.py  mypy.ini  pyproject.toml  xiangcai.code-workspace
.github/workflows/: django.yml
apps/: settings.py  urls.py  wsgi.py
apps/apps/: settings.py
apps/blog/: pagination.py  urls.py
apps/blog/models/: __init__.py
apps/blog/views/: __init__.py  category.py  user.py
blog/: admin.py  pagination.py  serializers.py  urls.py
blog/forms/: comment.py
blog/migrations/: 0001_initial.py  0002_auto_20190817_1343.py  0003_auto_20190817_1521.py  0004_auto_20191002_1147.py  0005_auto_20191125_1337.py  0006_comment.py  0007_auto_20191126_0930.py  0008_auto_20191126_1004.py  0009_auto_20191126_2131.py  0010_article_body_html.py  0011_auto_20200204_2331.py  0012_auto_20200319_1927.py  0013_auto_20200319_2019.py  0014_auto_20200415_0913.py
blog/models/: __init__.py  article.py  category.py  comment.py
blog/views/: __init__.py  article.py
blog/views/api/v1/: article.py  (+2 more)
blog/views/general/: article.py  errors.py
blog/views/generic/: article.py  category.py  comment.py
config/: .env  base.py  env.py  local.py  production.py  server.py  settings.py
middleware/: logMiddleWare.py
requirements/: base.txt
templates/: 404.html  500.html  base.html
templates/admin/: base.html
templates/main/: _article.html  _category.html  _commont.html  _navbar.html  article.html  article_list.html  category.html  category_list.html  index.html
utility/: base.py  run.sh
