[tool.poetry]
name = "xiangcai"
version = "0.1.0"
description = "my persional blog"
authors = ["yunpeng.zhan <zhanyunpeng1996@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.5"
djangorestframework = "^3.11.0"
gunicorn = "^20.0.4"
django-shell-plus = "^1.1.7"
django_extensions = "^2.2.9"
django-cors-headers = "^3.2.1"
pymysql = "^0.9.3"
pandas = "^1.0.3"
django-bootstrap4 = "^1.1.1"
markdown = "^3.2.1"
django-ckeditor = "^5.9.0"
django-redis = "^4.11.0"
django-environ = "^0.4.5"
django-rest-swagger = "^2.2.0"
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.770"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.2"
django-debugtools = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
